// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi
  save
</div>
`;

exports[`matches snapshot2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi
  Click
</div>
`;
